@@ -1,3 +1,5 @@
+- New feature: Shifts extra capacity, used when its own is full
+
 30.4.3 (09-06-2020)
 - Improvement: Added code to ShiftCapacityType 
 
